changed the color theme

--- a/styles.css
+++ b/styles.css
@@ -10,13 +10,13 @@ body{
     width: 400px;
     padding: 20px;
     display: flex;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 0 auto;
     justify-content: space-around;
     text-align: center;
     color: #2b2839;
-    background: #ddebf8;
+    background: #A0E7E5;
     border-bottom: 6px solid #d8cefe;
+    border-radius: 8px;
 }
 .border-blue {
     border: 6 px dotted blue;
